webp: implement animation and metadata reading

BUG: 452473